# forge-OS

./: .gitignore  ADL.md  BATCH-MANIFESTS.md  BOOT.md  BUILD-LEARNINGS.md  CLAUDE.md  README.md  forge-os.config.json  nyx-portrait.html  nyx-self-portrait.html  package.json  pnpm-lock.yaml
.claude/: launch.json  settings.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  state.rs
apps/desktop/src-tauri/src/build_state/: batches.rs  findings.rs  generator.rs  mod.rs  risks.rs
apps/desktop/src-tauri/src/commands/: agents.rs  build_state.rs  capabilities.rs  chat.rs  compact.rs  confirmation.rs  connectivity.rs  devserver.rs  devserver_patterns.rs  dispatch.rs  hud.rs  layout.rs  memory.rs  mod.rs  permissions.rs  policy.rs  proposals.rs  providers.rs  registry.rs  search.rs  sessions.rs  swarm.rs  team.rs  vault.rs  windows.rs
apps/desktop/src-tauri/src/compact/: counter.rs  mod.rs  restore.rs  sanitize.rs  summary.rs  threshold.rs  ttl.rs
apps/desktop/src-tauri/src/database/: checkpoints.rs  migrations.rs  mod.rs  queries.rs  sanitize.rs  schema.rs  search.rs
apps/desktop/src-tauri/src/dispatch/: cache.rs  context.rs  halt.rs  lifecycle.rs  mod.rs  queue.rs  types.rs
apps/desktop/src-tauri/src/hud/: boot_parser.rs  dispatch_events.rs  events.rs  findings.rs  mod.rs
apps/desktop/src-tauri/src/memory/: dream.rs  engine.rs  index.rs  kairos.rs  logs.rs  mod.rs  topics.rs  types.rs
apps/desktop/src-tauri/src/proposals/: decisions.rs  mod.rs  store.rs  triage.rs
(+458 files in other folders)
