[package]
name = "forge-os-desktop"
version = "0.0.1"
description = "Forge OS — AI Development Team"
authors = ["CYM4TIC"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
keyring = { version = "3", features = ["sync-secret-service"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
regex = "1"
